# gitlab-control-panel

./: README.md  pyproject.toml  terragrunt.hcl
_envcommon/: gitlab-group.hcl  gitlab-project.hcl
examples/configuration/: default_root_group_settings.json
internal-projects/: .terraform.lock.hcl
internal-projects/dark-knight/: terragrunt.hcl
internal-projects/dark-knight/top-secret-project/: terragrunt.hcl
terraform-modules/gitlab-group/: data.tf  locals.tf  main.tf  outputs.tf  variables.tf
terraform-modules/gitlab-project/: data.tf  locals.tf  main.tf  variables.tf  versions.tf
