[tool.poetry]
name = "gitlab-groups-and-projects-iac"
version = "0.1.0"
description = "Deploy and configure Gitlab groups, subgroups, and projects as code"
authors = ["canyonjs <hello@canyon.sh>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cdktf-cdktf-provider-gitlab = "^11.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
rich = "^13.7.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
